fix title size to avoid overlap

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -116,10 +116,17 @@
   background-color: var(--primary-accent-light);
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1600px) {
   .title {
     margin-top: 8rem;
     font-size: 400%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .title {
+    margin-top: 6rem;
+    font-size: 320%;
   }
 }
 
@@ -160,8 +167,8 @@
   }
 
   .title {
-    margin-top: 5rem;
-    font-size: 300%;
+    margin-top: 4rem;
+    font-size: 250%;
   }
 
   .space {
